fix: fix workflows:bug:

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,4 +1,4 @@
-name: 自动部署
+name: todoList 自动部署
 on:
   push:
     branches:
@@ -13,9 +13,9 @@ jobs:
           version: 8.6.2
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-      - run: pnpm install
-      - run: pnpm run build
+          node-version: 16.X
+      - run: npm install
+      - run: npm run build
       - name: action-Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
