--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "element-plus": "^2.9.7",
     "error-stack-parser": "^2.1.4",
     "pinia": "^3.0.1",
+    "rrweb": "2.0.0-alpha.4",
+    "rrweb-player": "1.0.0-alpha.4",
     "source-map": "^0.7.4",
     "source-map-js": "^1.2.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@rrweb/types": "2.0.0-alpha.18",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.9",
